Implement secure user ID system and enable team access to user data
- Changed file naming from email-based to user ID-based system
- Generated unique user IDs using MD5 hash of email (first 12 chars)
- Updated all routes to use new file naming convention
- Migrated existing user files to new naming system
- Removed user data restrictions from .gitignore for team access
- Enhanced security and privacy while maintaining functionality
- Files now use format: results_[user_id].json instead of results_[email].json

--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,7 @@ instance/
 .env.test.local
 .env.production.local
 
-# User data files
-users.json
-progress_*.json
-results_*.json
+# User data files - REMOVED: Team needs access to user data
 
 # IDE
 .vscode/
